--- a/template/home.html
+++ b/template/home.html
@@ -1,9 +1,8 @@
-{{ ads.length | pluralise:{sing: 'ad', plu: 'ads'} }} listed.
-<ul>
-	<li class="row" data-ng-repeat="ad in ads">
+{{ads.length}} {{ ads.length | pluralise:{sing: 'ad', plu: 'ads'} }} listed.
+<ul class="list-group">
+	<li class="row list-group-item" data-ng-repeat="ad in ads">
 		<h2>{{ad.title}} <small>Posted on 21st March 2014.</small></h2>
 		<div class=""><strong>Description:</strong> {{ ad.description | capitalise }}</div>
-		<div ta-angry class="">Contact: {{ad.contact}}</div>
-		<hr>
+		<div ta-angry class="" data-ng-show="{{ad.contact}}"><a href="callto:{{ad.contact}}">Contact: {{ad.contact}}</a></div>
 	</li>
 </ul>
