--- a/template/home.html
+++ b/template/home.html
@@ -3,6 +3,6 @@
 	<li class="row list-group-item" data-ng-repeat="ad in ads">
 		<h2>{{ad.title}} <small>Posted on 21st March 2014.</small></h2>
 		<div class=""><strong>Description:</strong> {{ ad.description | capitalise }}</div>
-		<div ta-angry class="" data-ng-show="{{ad.contact}}"><a href="callto:{{ad.contact}}">Contact: {{ad.contact}}</a></div>
+		<div ta-angry data-ng-show="{{ad.contact}}"><a href="callto:{{ad.contact}}">Contact: {{ad.contact}}</a></div>
 	</li>
 </ul>
