--- a/template/home.html
+++ b/template/home.html
@@ -1,4 +1,4 @@
-{{ads.length}} {{ ads.length | pluralise:{sing: 'ad', plu: 'ads'} }} listed.
+<p class="lead">{{ads.length}} {{ ads.length | pluralise:{sing: 'ad', plu: 'ads'} }} listed.</p>
 <ul class="list-group">
 	<li class="row list-group-item" data-ng-repeat="ad in ads">
 		<h2>{{ad.title}} <small>Posted on 21st March 2014.</small></h2>
