--- a/template/register.html
+++ b/template/register.html
@@ -47,7 +47,7 @@
         <input type="radio" ng-model="gender" value="Male">  Male 
 		<input type="radio" ng-model="gender" value="Female"> Female 
     </div> 	 
-	<button type="submit">RegisterNow</button>
+	<button type="submit" class="primary-button">RegisterNow</button>
 	<span>Already Registered <a href="/login"> Log in</a></span>
 </form>
 
