--- a/style/taClassified.css
+++ b/style/taClassified.css
@@ -12,14 +12,15 @@
 
 /*Sign Up form styles*/
 
-.register-form .row{
+.classified-form .row{
 	padding-bottom: 10px;
 }
-.register-form label{
+.classified-form label{
  	  font-size: 12px;
     width: 30%;
+    padding-left: 15px;
  }
- .register-form input[type="text"],.register-form input[type="password"],.register-form input[type="email"]{
+ .classified-form input[type="text"],.classified-form input[type="password"],.classified-form input[type="email"]{
  	width: 65%;
  }
 .invalid{
@@ -30,32 +31,36 @@
 	display:inline;
   font-size:10px;
 }
+.error-message span{
+  padding-left: 15px;
+}
 .primary-button{
 	background-color: #101010;
   border: 2px solid #80BB01;
   color: #777777;
   font-size: 12px;
   font-weight: 700;
-  padding: 5px 15px;
-  margin-right:15px;
+  padding: 5px 10px;
+  margin-right:0px;
 }
-.register-form button[type="submit"]:hover,.register-form button[type="submit"]:focus{
+.classified-form button[type="submit"]:hover,.classified-form button[type="submit"]:focus{
 	color:#ffffff;
 	background-color:#000000;
 }
-h2{
+.form-heading{
   font-size: 20px;
+  margin-top: 0px;
 }
+
 @media screen and (min-width: 600px){
 
   /*Sign Up form styles*/
-
-  .register-form label{
-    width: 20%;
+  .classified-form label{
+    width: 35%;
     font-size:13px;
    }
-  .register-form input[type="text"],.register-form input[type="password"],.register-form input[type="email"]{
-    width: 40%;
+  .classified-form input[type="text"],.classified-form input[type="password"],.classified-form input[type="email"]{
+    width: 60%;
    }
   .error-message{
     font-size:14px;
@@ -63,20 +68,21 @@ h2{
   .primary-button{
     font-size:14px;
     padding: 5px 35px;
+    margin-right:15px;
   }
 }
 @media screen and (min-width:992px){
 
   /*Sign Up form styles*/
 
-  .register-form label{
-    width: 12%;
+  .classified-form label{
+    width: 30%;
     font-size:14px;
    }
-   .register-form input[type="text"],.register-form input[type="password"],.register-form input[type="email"]{
-    width: 20%;
+   .classified-form input[type="text"],.classified-form input[type="password"],.classified-form input[type="email"]{
+    width: 60%;
    }
-   h2{
-    font-size:30px
+   .form-heading{
+    font-size:25px
    }
 }
