--- a/template/topNavigation.html
+++ b/template/topNavigation.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-            	<li><a href="" ng-click="signUp()">Sign Up</a></li>
+            	<li><a href="#" ng-click="signUp()">Sign Up</a></li>
             	<li><a href="#" ng-click="logIn()">Log in</a></li>
             </ul>
         </div>
